[gd_scene load_steps=5 format=3 uid="uid://bygbx4b0se261"]

[ext_resource type="Script" path="res://cards/card_template.gd" id="1_thros"]
[ext_resource type="Texture2D" uid="uid://iceo4sb5gmst" path="res://cards/art/back1.png" id="2_p5rtj"]
[ext_resource type="Texture2D" uid="uid://br4nfrhhdwif1" path="res://cards/art/clubs1.png" id="2_wo2pi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_og50e"]
size = Vector2(37, 52)

[node name="CardTemplate" type="Area2D"]
script = ExtResource("1_thros")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_og50e")

[node name="CardFront" type="Sprite2D" parent="."]
texture = ExtResource("2_wo2pi")

[node name="CardBack" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_p5rtj")
